# mistral-training

./: .gitignore  01_train_base_model.py  01_train_full_precision.py  01_train_full_precision_legacy.py  CLAUDE.md  README.md  monitor_training_progress.sh  omsg.sh  pyproject.toml  run_training_background.sh  run_training_foreground.sh  stop_training_process.sh  talk.sh  test_model_inference.py
.claude/: settings.local.json
quantized/: 02_convert_full_to_gguf.py  02_convert_lora_to_gguf.py  02_quantize_and_convert.py  03_register_with_ollama.sh
